objects/Job_Interviewer__c.object
<CustomObject>
    <description>One interviewer can do interview for several job vacancies &amp; one job vacancy can be interviewed by many interviewers.</description>
    <fields>
        <fullName>Interview_Round__c</fullName>
        <label>Interview Round</label>
        <picklist>
            <picklistValues>
                <fullName>Technical Round</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Functional Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Round</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>Interviewer__c</referenceTo>
        <relationshipLabel>Job Interviewer</relationshipLabel>
        <relationshipName>Job_Interviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Job Interviewer</relationshipLabel>
        <relationshipName>Job_Interviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipLabel>Job Interviewer</relationshipLabel>
        <relationshipName>Job_Interviewer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Job Interviewer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>NAME</columns>
        <columns>Interviewer__c</columns>
        <columns>Interview_Round__c</columns>
        <columns>Job_Application__c</columns>
        <columns>Vacancy__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
    </listViews>
    <nameField>
        <displayFormat>JO# - {0}</displayFormat>
        <label>Job Interviewer Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Interviewer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>